@@ -70,6 +70,7 @@
 1 BIRT Edwin Michael Smith's Birth event
 2 DATE 24 MAY 1961
 2 PLAC San Jose, Santa Clara Co., CA
+3 FORM city, county, state
 2 FAMC @F02@
 1 OCCU
 2 PLAC Software Engineer
